TCVP-3116 Updated API calls and added hearing type filter
