# src/backend/TrafficCourts/Staff.Service/Features/CourtFiles/Summaries/Request.cs
@@ -24,6 +24,7 @@ public class Request : IRequest<Response>
     public string? dispute_status_codes { get; set; }
     public string? appearance_courthouse_ids { get; set; }
     public string? to_be_heard_at_courthouse_ids { get; set; }
+    public string? hearing_type_cd { get; set; }
 
     public int? page_number { get; set; }
     public int? page_size { get; set; }
